BB-10151: Mobile iOS/FrontStore > sticky panel - header is not displayed - fixed sticky panel on iOS

--- a/src/Oro/Bundle/FrontendLocalizationBundle/Resources/public/default/scss/components/localization-switcher.scss
+++ b/src/Oro/Bundle/FrontendLocalizationBundle/Resources/public/default/scss/components/localization-switcher.scss
@@ -6,6 +6,8 @@
         margin: $localization-switcher-toggle-offset;
         height: $localization-switcher-toggle-height;
 
+        line-height: $localization-switcher-toggle-height;
+
         border: 0;
         background: none;
 
